--- a/AndroidMusicQuiz/MusicTheoryRomanNumeralAnalysisQuiz/app/src/main/res/layout-sw320dp/activity_mtrnaquiz.xml
+++ b/AndroidMusicQuiz/MusicTheoryRomanNumeralAnalysisQuiz/app/src/main/res/layout-sw320dp/activity_mtrnaquiz.xml
@@ -489,7 +489,8 @@
         android:layout_height="wrap_content"
         android:text="@string/gbA"
         android:textSize="65sp"
-        android:textColor="@android:color/black"      android:layout_alignBottom="@+id/keyTextView"
+        android:textColor="@android:color/black"
+        android:layout_alignBottom="@+id/keyTextView"
         android:layout_marginBottom="30dp"
         android:layout_centerHorizontal="true"/>
     <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicFontTextView
@@ -524,6 +525,17 @@
         android:textColor="@android:color/black"
         android:layout_toRightOf="@+id/fFlatAlto"
         android:layout_toEndOf="@+id/fFlatAlto"
+        android:layout_alignBottom="@+id/altoClef"/>
+
+    <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicFontTextView
+        android:id="@+id/keySigLinesBeforeAccidentals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/keySigBlankMedium"
+        android:textSize="65sp"
+        android:textColor="@android:color/black"
+        android:layout_toLeftOf="@+id/noteheadA3Sharp"
+        android:layout_toStartOf="@+id/noteheadA3Sharp"
         android:layout_alignBottom="@+id/altoClef"/>
 
     <!-- sharps -->
@@ -1505,7 +1517,7 @@
         android:textStyle="bold"
         android:gravity="center"
         android:textAllCaps="false"
-        android:layout_above="@+id/numAccidentalsTextView"
+        android:layout_above="@+id/refreshButton"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
@@ -1530,72 +1542,34 @@
         android:layout_marginBottom="5dp"/>
 
     <TextView
-        android:id="@+id/scoreTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Score"
-        android:textSize="18sp"
-        android:textColor="#f2ac9c"
-        android:textStyle="bold"
-        android:layout_alignTop="@+id/refreshButton"
-        android:layout_toRightOf="@+id/refreshButton"
-        android:layout_toEndOf="@+id/refreshButton"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="10dp"/>
-
-    <TextView
         android:id="@+id/scorePointsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0 / 0"
-        android:textSize="18sp"
+        android:textSize="23sp"
         android:textColor="#f2ac9c"
         android:textStyle="bold"
         android:layout_alignBottom="@+id/refreshButton"
-        android:layout_alignLeft="@+id/scoreTextView"
-        android:layout_alignStart="@+id/scoreTextView" />
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_toRightOf="@+id/refreshButton"
+        android:layout_toEndOf="@+id/refreshButton" />
 
-    <TextView
-        android:id="@+id/numAccidentalsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Number of\nkey signature\naccidentals"
-        android:textSize="15sp"
-        android:textColor="#f2ac9c"
+    <Button
+        android:id="@+id/settingsButton"
+        android:text="\u25A1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:textSize="20sp"
+        android:background="@drawable/pink_buttons"
+        android:textColor="@drawable/pink_buttons_text"
         android:textStyle="bold"
-        android:gravity="center_vertical|end"
-        android:lineSpacingExtra="0dp"
-        android:layout_alignBottom="@+id/refreshButton"
-        android:layout_toLeftOf="@+id/radioGroup"
-        android:layout_toStartOf="@+id/radioGroup" />
-
-    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/generateChordButton"
         android:layout_alignEnd="@+id/generateChordButton"
-        android:id="@+id/radioGroup">
-        <RadioButton
-            android:id="@+id/easyRadio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0 \u2013 3"
-            android:textSize="20sp"
-            android:textColor="#f2ac9c"
-            android:button="@drawable/pink_radios"
-            android:textStyle="bold" />
-        <RadioButton
-            android:id="@+id/hardRadio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="All"
-            android:textSize="20sp"
-            android:textColor="#f2ac9c"
-            android:button="@drawable/pink_radios"
-            android:textStyle="bold" />
-    </RadioGroup>
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
 
     <TextView
         android:id="@+id/keyTextView"
