--- a/AndroidMusicQuiz/MusicTheoryRomanNumeralAnalysisQuiz/app/src/main/res/layout-sw480dp/activity_mtrnaquiz.xml
+++ b/AndroidMusicQuiz/MusicTheoryRomanNumeralAnalysisQuiz/app/src/main/res/layout-sw480dp/activity_mtrnaquiz.xml
@@ -527,6 +527,17 @@
         android:layout_toEndOf="@+id/fFlatAlto"
         android:layout_alignBottom="@+id/altoClef"/>
 
+    <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicFontTextView
+        android:id="@+id/keySigLinesBeforeAccidentals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/keySigBlankMedium"
+        android:textSize="100sp"
+        android:textColor="@android:color/black"
+        android:layout_toLeftOf="@+id/noteheadA3Sharp"
+        android:layout_toStartOf="@+id/noteheadA3Sharp"
+        android:layout_alignBottom="@+id/altoClef"/>
+
     <!-- sharps -->
 
     <com.nihk.github.musictheoryromannumeralanalysisquiz.MusicFontTextView
@@ -1379,7 +1390,7 @@
             android:id="@+id/answerButton1"
             android:layout_width="155dp"
             android:layout_height="wrap_content"
-            android:textSize="37sp"
+            android:textSize="27sp"
             android:typeface="serif"
             android:textAllCaps="false"
             android:background="@drawable/green_buttons"
@@ -1408,7 +1419,7 @@
             android:id="@+id/answerButton2"
             android:layout_width="155dp"
             android:layout_height="wrap_content"
-            android:textSize="37sp"
+            android:textSize="27sp"
             android:typeface="serif"
             android:textAllCaps="false"
             android:background="@drawable/green_buttons"
@@ -1437,7 +1448,7 @@
             android:id="@+id/answerButton3"
             android:layout_width="155dp"
             android:layout_height="wrap_content"
-            android:textSize="37sp"
+            android:textSize="27sp"
             android:typeface="serif"
             android:textAllCaps="false"
             android:background="@drawable/green_buttons"
@@ -1466,7 +1477,7 @@
             android:id="@+id/answerButton4"
             android:layout_width="155dp"
             android:layout_height="wrap_content"
-            android:textSize="37sp"
+            android:textSize="27sp"
             android:typeface="serif"
             android:textAllCaps="false"
             android:background="@drawable/green_buttons"
@@ -1510,73 +1521,37 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"/>
 
-        <TextView
-            android:id="@+id/scoreTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Score"
-            android:textSize="30sp"
-            android:textColor="#f2ac9c"
-            android:textStyle="bold"
-            android:layout_alignTop="@+id/refreshButton"
-            android:layout_toRightOf="@+id/refreshButton"
-            android:layout_toEndOf="@+id/refreshButton"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="10dp"/>
 
         <TextView
             android:id="@+id/scorePointsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0 / 0"
-            android:textSize="30sp"
+            android:textSize="34sp"
             android:textColor="#f2ac9c"
             android:textStyle="bold"
             android:layout_alignBottom="@+id/refreshButton"
-            android:layout_alignLeft="@+id/scoreTextView"
-            android:layout_alignStart="@+id/scoreTextView" />
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="18dp"
+            android:layout_toRightOf="@+id/refreshButton"
+            android:layout_toEndOf="@+id/refreshButton" />
 
-        <TextView
-            android:id="@+id/numAccidentalsTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Number of\nkey signature\naccidentals"
-            android:textSize="23sp"
-            android:textColor="#f2ac9c"
+
+        <Button
+            android:id="@+id/settingsButton"
+            android:text="\u25A1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:textSize="50sp"
+            android:background="@drawable/pink_buttons"
+            android:textColor="@drawable/pink_buttons_text"
             android:textStyle="bold"
-            android:gravity="center_vertical|end"
-            android:lineSpacingExtra="0dp"
-            android:layout_alignBottom="@+id/refreshButton"
-            android:layout_toLeftOf="@+id/radioGroup"
-            android:layout_toStartOf="@+id/radioGroup" />
-
-        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignBottom="@+id/refreshButton"
+            android:layout_alignParentBottom="true"
             android:layout_alignRight="@+id/generateChordButton"
             android:layout_alignEnd="@+id/generateChordButton"
-            android:id="@+id/radioGroup">
-            <RadioButton
-                android:id="@+id/easyRadio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0 \u2013 3"
-                android:textSize="30sp"
-                android:textColor="#f2ac9c"
-                android:button="@drawable/pink_radios"
-                android:textStyle="bold" />
-            <RadioButton
-                android:id="@+id/hardRadio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="All"
-                android:textSize="30sp"
-                android:textColor="#f2ac9c"
-                android:button="@drawable/pink_radios"
-                android:textStyle="bold" />
-        </RadioGroup>
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="15dp"/>
 
         <TextView
             android:id="@+id/keyTextView"
